--- a/vacations/templates/vacations/details.html
+++ b/vacations/templates/vacations/details.html
@@ -37,7 +37,14 @@
                 {% endif %}
             {% endfor %}</td>
         </tr>
-
+        <tr style="background-color: #FAFAFA;">
+            <td>Добавить</td>
+            <td><form method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type="submit" value="Добавить">
+            </form></td>
+        </tr>
     </table>
     <!--
     <form method="post" action="/vacations/add/" name="Добавить отпуск">
@@ -48,7 +55,7 @@
         <p><label for="id_end">Конец отпуска:</label> <input type="text" name="end" required="" id="id_end"></p>
         <input type="submit" value="Добавить">
     </form>
-    -->
-    <embed src="{% url 'add' empl=employee.pk %}" width="700" height="400">
+
+    <embed src=" url 'add' empl=employee.pk " width="700" height="400">-->
 </section>
 {% endblock %}
