--- a/vacations/templates/vacations/by_department.html
+++ b/vacations/templates/vacations/by_department.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <section>
-    <h1><font color="#2764A0">Рейтинг работников</font></h1>
+    <h3>Рейтинг работников</h3><hr>
     <h2><select onChange="window.location.href=this.value">
         <option value="{% url 'index' %}">Все отделы</option>
         {% for department in departments %}
