--- a/vacations/templates/vacations/details.html
+++ b/vacations/templates/vacations/details.html
@@ -7,7 +7,7 @@
     <table>
         <tr style="background-color: #47A4FF;">
             <th class="col_detail1">ФИО</th>
-            <th class="col_detail2" style="font-size: 20pt; overflow:hidden; white-space:nowrap;">{{ employee.name }}</th>
+            <th class="col_detail2" style="font-size: 20pt;">{{ employee.name }}</th>
         </tr>
         <tr style="background-color: #FAFAFA;">
             <td>Отдел</td>
