--- a/vacations/templates/vacations/index.html
+++ b/vacations/templates/vacations/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <section>
-    <h1><font color="#2764A0">Рейтинг работников</font></h1>
+    <h3>Рейтинг работников</h3><hr>
     <h2><select onChange="window.location.href=this.value">
         <option selected="selected">Все отделы</option>
         {% for department in departments %}
