--- a/vacations/templates/vacations/add_employee.html
+++ b/vacations/templates/vacations/add_employee.html
@@ -1,6 +1,6 @@
 {% extends "layout/basic.html" %}
 
-{% block title %}Добавить сотрудника{% endblock %}
+{% block title %}Добавление сотрудника{% endblock %}
 
 {% block content %}
 <section>
