--- a/vacations/templates/vacations/details.html
+++ b/vacations/templates/vacations/details.html
@@ -1,6 +1,6 @@
 {% extends "layout/basic.html" %}
 
-{% block title %}Карточка сотрудника{% endblock %}
+{% block title %}{{ employee.name }}{% endblock %}
 
 {% block content %}
 <section>
