CSS and decoration changes

--- a/vacations/templates/layout/basic.html
+++ b/vacations/templates/layout/basic.html
@@ -12,13 +12,12 @@
         <h1>График отпусков</h1>
     </header>
     <nav>
-        <a href="{% url 'index' %}">Главная</a>
-        <hr>
-        <a href="{% url 'add_employee' %}">Добавить сотрудника</a>
-        <hr>
-        <a href="{% url 'add_department' %}">Добавить отдел</a>
-        <hr>
-        <a href="http://192.168.0.26:8000/admin">Администратор</a>
+        <ul>
+            <li><a {% block index %}{% endblock %} href="{% url 'index' %}">Главная</a></li>
+            <li><a {% block add_employee %}{% endblock %} href="{% url 'add_employee' %}">Добавить сотрудника</a></li>
+            <li><a {% block add_department %}{% endblock %} href="{% url 'add_department' %}">Добавить отдел</a></li>
+            <li><a href="http://192.168.0.26:8000/admin">Администратор</a></li>
+        </ul>
     </nav>
     {% block content %}
     {% endblock %}
