--- a/vacations/templates/vacations/edit_employee.html
+++ b/vacations/templates/vacations/edit_employee.html
@@ -10,7 +10,7 @@
             {{ form.as_ul }}
         <input type="submit" class="button" value="Сохранить">
 
-        <a href="{% url 'index' %}" class="button deletebutton">Удалить сотрудника</a>
+        <a href="{% url 'index' %}"><button class="button deletebutton">Удалить сотрудника</button></a>
     </form>
 </section>
 {% endblock %}
