--- a/vacations/static/vacations/style.css
+++ b/vacations/static/vacations/style.css
@@ -22,18 +22,15 @@ a {
 }
 
 nav {
-    font-size: 16pt;
-    width: 150px;
+    margin-left: 0px;
+    font-size: 14pt;
+    width: 14%;
     float: left;
-}
-
-nav a {
-    display: block;
-    margin: 10px 0px;
+    border-right: 2px;
 }
 
 section {
-    margin-left: 170px;
+    margin-left: 15%;
     background-color: #e6f7f6;
 }
 
@@ -43,8 +40,8 @@ table {
     border-collapse: collapse;
 }
 
-li {
-    margin: 20px;
+section li {
+    margin: 8px;
 }
 
 .col1,
@@ -63,7 +60,7 @@ li {
 .col_detail1 {
     width: 20%;
     text-align: left;
-    font-weight: normal;
+    font-weight: bold;
 }
 
 .col_detail2 {
@@ -72,21 +69,53 @@ li {
 }
 
 .button {
-  font: bold 14px Arial;
-  text-decoration: none;
-  background-color: #EEEEEE;
-  color: #333333;
-  margin: 10px;
-  padding: 10px 16px 10px 16px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
+    font: bold 14px Arial;
+    text-decoration: none;
+    background-color: #FAFAFA;
+    color: #333333;
+    margin: 4px;
+    padding: 4px 10px 4px 10px;
+    border-top: 1px solid #CCCCCC;
+    border-right: 1px solid #333333;
+    border-bottom: 1px solid #333333;
+    border-left: 1px solid #CCCCCC;
+    border-radius: 8px;
 }
 
 .deletebutton {
-  background-color: #FFBBBB;
-  color: #DD3333;
+    background-color: #FFE5E5;
+    color: #DD3333;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #FAFAFA;
+}
+
+li a {
+    margin: 0;
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover:not(.active) {
+    background-color: #EFEFEF;
+}
+
+.active {
+    background-color: #47A4FF;
+    color: white;
+}
+
+.navbar {
+    display: block;
+
 }
 
 th, td {
