--- a/vacations/templates/vacations/details.html
+++ b/vacations/templates/vacations/details.html
@@ -7,30 +7,30 @@
     <table>
         <tr style="background-color: #47A4FF;">
             <th class="col_detail1">ФИО</th>
-            <th class="col_detail2" style="font-size: 20pt;">{{ employee.name }}</th>
+            <th class="col_detail2" style="font-size: 20pt;">{{ employee.name }}<a href="{% url 'employee_update_form' employee.pk %}"><button class="button">Редактировать</button></a></th>
         </tr>
         <tr style="background-color: #FAFAFA;">
-            <td>Отдел</td>
+            <td class="col_detail1">Отдел</td>
             <td><a href="{% url 'by_department' employee.department.pk %}">{{ employee.department }}</a></td>
         </tr>
         <tr style="background-color: #EFEFEF;">
-            <td>Дата начала работы</td>
+            <td class="col_detail1">Дата начала работы</td>
             <td>{{ employee.entry_date }}</td>
         </tr>
         <tr style="background-color: #FAFAFA;">
-            <td>Рейтинг</td>
+            <td class="col_detail1">Рейтинг</td>
             <td>{{ employee.rating }}</td>
         </tr>
         <tr style="background-color: #EFEFEF;">
-            <td>Замещает</td>
+            <td class="col_detail1">Замещает</td>
             <td>{% if employee.replaces is null %}Нет{% else %}<a href="{% url 'details' employee.replaces.pk %}">{{ employee.replaces }}</a>{% endif %}</td>
         </tr>
         <tr style="background-color: #FAFAFA;">
-            <td>Отпускные дни</td>
+            <td class="col_detail1">Отпускные дни</td>
             <td>{{ employee.vacation_days }}</td>
         </tr>
         <tr style="background-color: #EFEFEF;">
-            <td>Отпуска</td>
+            <td class="col_detail1">Отпуска</td>
             <td>{% for vacation in vacations %}
                 {% if vacation.employee.name == employee.name %}
                 {{ vacation.start|date:"SHORT_DATE_FORMAT" }} - {{ vacation.end|date:"SHORT_DATE_FORMAT" }}<br>
@@ -38,11 +38,11 @@
             {% endfor %}</td>
         </tr>
         <tr style="background-color: #FAFAFA;">
-            <td>Добавить</td>
+            <td class="col_detail1">Добавить отпуск</td>
             <td><form method="post">
                 {% csrf_token %}
                 {{ form.as_p }}
-                <input type="submit" value="Добавить">
+                <input type="submit" class="button" value="Добавить">
             </form></td>
         </tr>
     </table>
