--- a/vacations/templates/vacations/employees.html
+++ b/vacations/templates/vacations/employees.html
@@ -4,7 +4,7 @@
     <h1>Рейтинг работников</h1>
     {% for employee in employees %}
         <div>
-            <h2>{{ employee.name }}</h2>
+            <h2>{{ employee }}</h2>
             <p>{{ employee.id }}</p>
             <p>{{ employee.department }}</p>
             <p>{{ employee.replaces }}</p>
