--- a/vacations/templates/layout/basic.html
+++ b/vacations/templates/layout/basic.html
@@ -26,6 +26,9 @@
             <li><a href="http://192.168.0.26:8000/admin">Администратор</a></li>
         </ul>
     </nav>
+    {% for message in messages %}
+        <p id="message">{{ message }}</p>
+    {% endfor %}
     {% block content %}
     {% endblock %}
 </body>
