Added permission logic for EDIT and VIEW

--- a/vacations/templates/vacations/index.html
+++ b/vacations/templates/vacations/index.html
@@ -12,14 +12,13 @@
     </select></h2>
     <table>
         <tr class="blue">
-            <th class="col1">Место</th>
-            <th class="col2">Рейтинг</th>
+            <th class="col1">Отдел</th>
             <th class="col3">ФИО</th>
             <th class="col4">Замещает</th>
             <th class="col5">Отпуска</th>
         </tr>
         {% for employee in employees %}
-            <tr class="{% cycle 'white' 'gray' %}"><td>{{ forloop.counter }}</td><td>{{ employee.rating }}</td><td><a href="{% url 'vacations:details' employee.pk %}">{{ employee }}</a></td><td>{% if employee.replaces is null %}Нет{% else %}<a href="{% url 'vacations:details' employee.replaces.pk %}">{{ employee.replaces }}</a>{% endif %}</td>
+            <tr class="{% cycle 'white' 'gray' %}"><td>{{ employee.department }}</td><td><a href="{% url 'vacations:details' employee.pk %}">{{ employee }}</a></td><td>{% if employee.replaces is null %}Нет{% else %}<a href="{% url 'vacations:details' employee.replaces.pk %}">{{ employee.replaces }}</a>{% endif %}</td>
                 <td>
                 {% for vacation in vacations %}
                     {% if vacation.employee.pk == employee.pk %}
