--- a/vacations/templates/vacations/by_department.html
+++ b/vacations/templates/vacations/by_department.html
@@ -15,6 +15,30 @@
         </select>
         <button>Пересчитать рейтинг</button>
     </h2>
+    <div>
+        <table>
+            <tr>
+                <th>Янв</th>
+                <th>Фев</th>
+                <th>Мар</th>
+                <th>Апр</th>
+                <th>Май</th>
+                <th>Июн</th>
+                <th>Июл</th>
+                <th>Авг</th>
+                <th>Сен</th>
+                <th>Окт</th>
+                <th>Ноя</th>
+                <th>Дек</th>
+            </tr>
+            <tr>
+                {% load humanize %}
+                {% for num in vacation_days_by_month %}
+                    <th>{{ num|floatformat:2 }}</th>
+                {% endfor %}
+            </tr>
+        </table>
+    </div>
     <table class="default">
         <tr class="blue">
             <th class="col1">Место</th>
