--- a/vacations/templates/vacations/details.html
+++ b/vacations/templates/vacations/details.html
@@ -4,6 +4,30 @@
 
 {% block content %}
 <section>
+    <div>
+        <table>
+            <tr>
+                <th>Янв</th>
+                <th>Фев</th>
+                <th>Мар</th>
+                <th>Апр</th>
+                <th>Май</th>
+                <th>Июн</th>
+                <th>Июл</th>
+                <th>Авг</th>
+                <th>Сен</th>
+                <th>Окт</th>
+                <th>Ноя</th>
+                <th>Дек</th>
+            </tr>
+            <tr>
+                {% load humanize %}
+                {% for num in vacation_days_by_month %}
+                    <th>{{ num }}</th>
+                {% endfor %}
+            </tr>
+        </table>
+    </div>
     <table>
         <tr class="blue">
             <th class="col_detail1">ФИО</th>
@@ -43,7 +67,34 @@
             <td class="col_detail1">Добавить отпуск</td>
             <td><form method="post">
                 {% csrf_token %}
-                {{ form.as_p }}
+                {# form.as_p #}
+                {# for field in form #}
+                <div class="fieldWrapper">
+                    {{ form.start.label_tag }} {{ form.start }}
+                </div>
+                <div class="fieldWrapper">
+                    {{ form.end.label_tag }} {{ form.end }}
+                </div>
+                {{ form.employee.as_hidden }}
+
+                {% if form.errors %}
+                    {% for field in form %}
+                        {% for error in field.errors %}
+                            <div class="alert alert-danger">
+                                <strong>Field: {{ error|escape }}</strong>
+                            </div>
+                        {% endfor %}
+                    {% endfor %}
+                    {% for error in form.non_field_errors %}
+                        <div class="alert alert-danger" style="color: red;">
+                            <strong>Non-Field: {{ error|escape }}</strong>
+
+                        </div>
+                    {% endfor %}
+                    <input type="submit" class="button" name="force_proceed" value="Игнорировать и добавить">
+
+                {% endif %}
+
                 <input type="submit" class="button" value="Добавить">
             </form></td>
         </tr>
