--- a/vacations/templates/vacations/index.html
+++ b/vacations/templates/vacations/index.html
@@ -4,12 +4,13 @@
 
 {% block content %}
 <section>
-    <h2><select onChange="window.location.href=this.value">
-        <option selected="selected">Все отделы</option>
-        {% for department in departments %}
-            <option value="{% url 'vacations:by_department' department.pk %}">{{ department }}</option>
-        {% endfor %}
-    </select></h2>
+    <h2>
+        <select onChange="window.location.href=this.value">
+            <option selected="selected">Все отделы</option>{% for department in departments %}
+            <option value="{% url 'vacations:by_department' department.pk %}">{{ department }}</option>{% endfor %}
+        </select>
+         <a href="{% url 'vacations:export_t7_all' %}"><button>Экспорт формы Т-7</button></a>
+    </h2>
     <table>
         <tr class="blue">
             <th class="col1">Отдел</th>
