--- a/vacations/templates/vacations/test.html
+++ b/vacations/templates/vacations/test.html
@@ -8,7 +8,7 @@
     <!--<link rel="stylesheet" type="text/css" href="{# static 'vacations/style.css' #}">-->
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
